syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/apis/alerting/v1";

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";
import "google/api/http.proto";
import "google/api/annotations.proto";
import "google/rpc/status.proto";

import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";
import "github.com/rancher/opni/pkg/apis/alerting/v1/alerting.proto";

package alerting;

// Opni-Alerting internal use
service AlertNotifications {
  rpc TriggerAlerts(TriggerAlertsRequest) returns (TriggerAlertsResponse) {
    option (google.api.http) = {
      post : "/trigger"
      body : "*"
    };
  }

  rpc ResolveAlerts(ResolveAlertsRequest) returns (ResolveAlertsResponse) {}

  rpc PushNotification(Notification) returns (google.protobuf.Empty) {
    option(google.api.http) = {
      post : "/push"
      body : "*"
    };
  }

  rpc ListRoutingRelationships(google.protobuf.Empty) 
    returns (ListRoutingRelationshipsResponse) {}
}


message Notification{
  string title = 1;
  string body = 2;
  // sets notification properties, for example
  // severity, golden signal, dedupe keys, group keys etc...
  // 
  // It is recommended to set severity, golden signal, 
  // dedupe keys and group keys 
  map<string,string> properties = 3;
}

// opni-alerting internal use
message TriggerAlertsRequest {
  core.Reference conditionId = 1;
  string namespace = 2;
  string conditionName = 3;
  map<string, string> annotations = 4;
  map<string, string> labels = 5;
}

message TriggerAlertsResponse {}

message ResolveAlertsRequest {
  core.Reference conditionId = 1;
  string namespace = 2;
  string conditionName = 3;
  map<string, string> annotations = 4;
  map<string, string> labels = 5;
}

message ResolveAlertsResponse {}

message ListRoutingRelationshipsResponse{
  map<string, core.ReferenceList> routingRelationships = 1;
}